@@ -64,6 +64,10 @@ phpQLAdmin 2.3.6 TO BE ANNOUNCED
 	    the list/array of administrators in include/attrib.administrator.inc:attribute_save().
 	  - Make sure that there ARE any forwarding addresses to the user to delete in include/pql_write.inc:pql_user_del().
 	  - Add the domain (and 'ou=<subbranch>') to the user DN if subbranch is defined.
+	  - Move the check for debugging from include/attrib.dnszone.inc:attribute_save() to
+	    bind9_edit_attributes.php:attribute_forward().
+	  - Make sure that 'type' is always set as a hidden value (to make sure it survive to
+	    bind9_edit_attributes.php).
 
 	GUI layout changes
 	  - Don't show the Kerberos info in the user add details page if KERBEROS isn't an option
